<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textColor="#fb1b1b1b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/ic_lighthouse"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="106dp"
            android:text="@string/app_version"
            android:textColor="#fb1b1b1b" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/tv_author"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="作者"
                android:textColor="#fb1b1b1b" />

            <TextView
                android:id="@+id/tv_fate"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:text="hse      程序  &amp; UI"
                android:textColor="#fb1b1b1b" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_fate"
                android:layout_alignStart="@+id/tv_fate"
                android:layout_alignLeft="@id/tv_fate"
                android:text="Fate     祈福"
                android:textColor="#fb1b1b1b" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="18dp"
            android:textColor="#fb1b1b1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact me" />
        <TextView
            android:id="@+id/tv_github"
            android:padding="18dp"
            android:textColor="#f82239bc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_address" />
    </LinearLayout>

</LinearLayout>
